# app/static/weather_v1/swagger.json
@@ -1,7 +1,10 @@
 {
   "info": {
+    "contact": {
+      "email": "ivo_d@icloud.com"
+    }, 
+    "description": "\u4e2a\u4eba\u7f51\u7ad9\u63a5\u53e3", 
     "version": "1.0.0", 
-    "description": "\u5b66\u4e60Swagger", 
     "title": "weather\u63a5\u53e3"
   }, 
   "paths": {
@@ -36,28 +39,92 @@
         }, 
         "parameters": [
           {
-            "required": true, 
-            "type": "string", 
             "description": "\u57ce\u5e02\u6216\u5730\u533a", 
-            "name": "location", 
-            "in": "path"
+            "required": true, 
+            "in": "query", 
+            "type": "string", 
+            "example": "\u6b66\u6c49", 
+            "name": "location"
           }
         ], 
         "tags": [
-          "\u5929\u6c14"
+          "weather"
+        ]
+      }
+    }, 
+    "/lifestyle": {
+      "get": {
+        "description": "\u751f\u6d3b\u6307\u6570\u548c\u751f\u6d3b\u6307\u6570\u9884\u62a5\u5305\u62ec\uff1a\u7a7f\u8863\u3001\u6d17\u8f66\u3001\u611f\u5192\u3001\u7d2b\u5916\u7ebf\u3001\u8fd0\u52a8\u3001\u8212\u9002\u5ea6\u3001\u65c5\u6e38\u3001\u7a7a\u6c14\u6c61\u67d3\u6269\u6563\u6761\u4ef6", 
+        "responses": {
+          "200": {
+            "description": "\u64cd\u4f5c\u6210\u529f", 
+            "schema": {
+              "$ref": "#/definitions/ApiResponse"
+            }
+          }, 
+          "400": {
+            "description": "\u8bf7\u6c42\u6210\u529f\uff0c\u4f46\u662f\u4e1a\u52a1\u5931\u8d25", 
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }, 
+          "429": {
+            "description": "\u8bf7\u6c42\u6b21\u6570\u8fc7\u591a", 
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }, 
+          "401": {
+            "description": "\u6743\u9650\u9a8c\u8bc1\u5931\u8d25", 
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        }, 
+        "parameters": [
+          {
+            "description": "\u57ce\u5e02\u6216\u5730\u533a", 
+            "required": true, 
+            "in": "query", 
+            "type": "string", 
+            "example": "\u6b66\u6c49", 
+            "name": "location"
+          }
+        ], 
+        "tags": [
+          "weather"
         ]
       }
     }
   }, 
+  "tags": [
+    {
+      "externalDocs": {
+        "url": "https://www.heweather.com/documents", 
+        "description": "\u6570\u636e\u6765\u6e90\u4e8e\u548c\u98ce\u5929\u6c14\uff0c\u6bcf\u5929\u6709\u8bbf\u95ee\u91cf\u9650\u5236"
+      }, 
+      "name": "weather", 
+      "description": "\u5929\u6c14\u63a5\u53e3"
+    }
+  ], 
+  "basePath": "/weather/v1", 
   "produces": [
     "application/json"
   ], 
-  "basePath": "/weather/v1", 
   "securityDefinitions": {
-    "APIToken": {
+    "api_key": {
       "type": "apiKey", 
-      "name": "X-API-TOKEN", 
+      "name": "api_key", 
       "in": "header"
+    }, 
+    "petstore_auth": {
+      "flow": "implicit", 
+      "type": "oauth2", 
+      "authorizationUrl": "http://petstore.swagger.io/oauth/dialog", 
+      "scopes": {
+        "write:pets": "modify pets in your account", 
+        "read:pets": "read your pets"
+      }
     }
   }, 
   "definitions": {
@@ -89,11 +156,6 @@
       }
     }
   }, 
-  "security": [
-    {
-      "APIToken": []
-    }
-  ], 
   "swagger": "2.0", 
   "consumes": [
     "application/json"
